tests/fixtures/invalid/list_mul_set.py
# Cannot multiply List[int] and Set[int]
x: list[int] = [1, 2, 3] * {1, 2, 3}
